# identificador_bandeira_cartao.ipynb

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  identificador_bandeira_cartao.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-ci.yml
docs/: index.md  installation.md  troubleshooting.md  usage.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
src/card_brand_identifier/: __init__.py  cli.py  validator.py
tests/: __init__.py  conftest.py  test_cli.py  test_validator.py
